@@ -35,6 +35,18 @@
 #define READER_DESC             "file reader for CIP (Constraint Integer Program) format"
 #define READER_EXTENSION        "cip"
 
+#define DEFAULT_CIP_WRITEFIXEDVARS  TRUE     /**< should fixed and aggregated variables be written when writing in CIP
+                                              *   format
+                                              */
+
+
+/** CIP reading data */
+struct SCIP_ReaderData
+{
+   SCIP_Bool             writefixedvars;
+};
+
+
 /** Section of the in CIP files */
 enum CipSection 
 {
@@ -537,65 +549,59 @@ SCIP_RETCODE getFixedVariable(
          buf = endptr;
       }
       else
+         /* otherwise keep buf */
          rhs = 0.0;
-      /* otherwise keep buf */
 
       /* initialize buffers for storing the variables and values */
       SCIP_CALL( SCIPallocBufferArray(scip, &vars, nvarssize) );
       SCIP_CALL( SCIPallocBufferArray(scip, &vals, nvarssize) );
 
-      /* parse linear sum to get variables and coefficients (save one position for variable) */
-      SCIP_CALL( SCIPparseVarsLinearsum(scip, buf, vars, vals, &nvars, nvarssize-1, &requsize, &endptr, &success) );
+      vars[0] = var;
+      vals[0] = -1.0;
+      --nvarssize;
 
+      /* parse linear sum to get variables and coefficients */
+      SCIP_CALL( SCIPparseVarsLinearsum(scip, buf, &(vars[1]), &(vals[1]), &nvars, nvarssize, &requsize, &endptr, &success) );
       if ( success && requsize > nvarssize )
       {
          /* realloc buffers and try again */
          nvarssize = requsize + 1;
          SCIP_CALL( SCIPreallocBufferArray(scip, &vars, nvarssize) );
          SCIP_CALL( SCIPreallocBufferArray(scip, &vals, nvarssize) );
+         --nvarssize;
 
-         SCIP_CALL( SCIPparseVarsLinearsum(scip, buf, vars, vals, &nvars, nvarssize, &requsize, &endptr, &success) );
+         SCIP_CALL( SCIPparseVarsLinearsum(scip, buf, &(vars[1]), &(vals[1]), &nvars, nvarssize, &requsize, &endptr, &success) );
          assert( ! success || requsize <= nvarssize); /* if successful, then should have had enough space now */
       }
 
-      if ( ! success )
+      if( success )
       {
-         SCIPerrorMessage("Could not parse aggregated information (line: %d):\n%s\n", cipinput->linenumber, cipinput->strbuf);
-         cipinput->haserror = TRUE;
-         SCIPfreeBufferArray(scip, &vals);
-         SCIPfreeBufferArray(scip, &vars);
-         return SCIP_OKAY;
+         /* add aggregated variable */
+         SCIP_CALL( SCIPaddVar(scip, var) );
+
+         /* special handling of variables that seem to be slack variables of indicator constraints */
+         str = SCIPvarGetName(var);
+         if ( strncmp(str, "indslack", 8) == 0 )
+         {
+            (void) strcpy(name, "indlin");
+            (void) strcat(name, str+8);
+         }
+         else if ( strncmp(str, "t_indslack", 10) == 0 )
+         {
+            (void) strcpy(name, "indlin");
+            (void) strcat(name, str+10);
+         }
+         else
+            (void) SCIPsnprintf(name, SCIP_MAXSTRLEN, "%s", SCIPvarGetName(var) );
+
+         /* add linear constraint for (multi-)aggregation */
+         SCIPdebugMessage("coupling constraint:\n");
+         SCIP_CALL( SCIPcreateConsLinear(scip, &lincons, name, nvars + 1, vars, vals, -rhs, -rhs, TRUE, TRUE, TRUE, TRUE, TRUE, FALSE, FALSE, FALSE, TRUE, FALSE) );
+         SCIPdebugPrintCons(scip, lincons, NULL);
+         SCIP_CALL( SCIPaddCons(scip, lincons) );
+         SCIP_CALL( SCIPreleaseCons(scip, &lincons) );
+         cipinput->aggregatedvars = TRUE;
       }
-
-      /* add aggregated variable */
-      SCIP_CALL( SCIPaddVar(scip, var) );
-
-      /* add aggregated variable to linear constraint */
-      vars[nvars] = var;
-      vals[nvars] = -1.0;
-
-      /* special handling of variables that seem to be slack variables of indicator constraints */
-      str = SCIPvarGetName(var);
-      if ( strncmp(str, "indslack", 8) == 0 )
-      {
-         (void) strcpy(name, "indlin");
-         (void) strcat(name, str+8);
-      }
-      else if ( strncmp(str, "t_indslack", 10) == 0 )
-      {
-         (void) strcpy(name, "indlin");
-         (void) strcat(name, str+10);
-      }
-      else
-         (void) SCIPsnprintf(name, SCIP_MAXSTRLEN, "aggr_%s", SCIPvarGetName(var) );
-
-      /* add linear constraint for (multi-)aggregation */
-      SCIPdebugMessage("coupling constraint:\n");
-      SCIP_CALL( SCIPcreateConsLinear(scip, &lincons, name, nvars+1, vars, vals, -rhs, -rhs, TRUE, TRUE, TRUE, TRUE, TRUE, FALSE, FALSE, FALSE, TRUE, FALSE) );
-      SCIPdebugPrintCons(scip, lincons, NULL);
-      SCIP_CALL( SCIPaddCons(scip, lincons) );
-      SCIP_CALL( SCIPreleaseCons(scip, &lincons) );
-      cipinput->aggregatedvars = TRUE;
 
       SCIPfreeBufferArray(scip, &vals);
       SCIPfreeBufferArray(scip, &vars);
@@ -710,7 +716,21 @@ SCIP_DECL_READERCOPY(readerCopyCip)
 
    /* call inclusion method of reader */
    SCIP_CALL( SCIPincludeReaderCip(scip) );
- 
+
+   return SCIP_OKAY;
+}
+
+/** destructor of reader to free user data (called when SCIP is exiting) */
+static
+SCIP_DECL_READERFREE(readerFreePpm)
+{
+   SCIP_READERDATA* readerdata;
+
+   assert(strcmp(SCIPreaderGetName(reader), READER_NAME) == 0);
+   readerdata = SCIPreaderGetData(reader);
+   assert(readerdata != NULL);
+   SCIPfreeMemory(scip, &readerdata);
+
    return SCIP_OKAY;
 }
 
@@ -854,7 +874,11 @@ static
 SCIP_DECL_READERWRITE(readerWriteCip)
 {  /*lint --e{715}*/
    SCIP_HASHTABLE* varhash = NULL;
+   SCIP_READERDATA* readerdata;
    int i;
+
+   assert(reader != NULL);
+   assert(strcmp(SCIPreaderGetName(reader), READER_NAME) == 0);
 
    SCIPinfoMessage(scip, file, "STATISTICS\n");
    SCIPinfoMessage(scip, file, "  Problem name     : %s\n", name);
@@ -900,7 +924,10 @@ SCIP_DECL_READERWRITE(readerWriteCip)
       }
    }
 
-   if( nfixedvars > 0 )
+   readerdata = SCIPreaderGetData(reader);
+   assert(readerdata != NULL);
+
+   if( readerdata->writefixedvars && nfixedvars > 0 )
    {
       int nwritten = 0;
 
@@ -1045,16 +1072,22 @@ SCIP_RETCODE SCIPincludeReaderCip(
    SCIP_READERDATA* readerdata;
    SCIP_READER* reader;
 
-   /* create reader data */
-   readerdata = NULL;
+   /* create cip reader data */
+   SCIP_CALL( SCIPallocMemory(scip, &readerdata) );
 
    /* include reader */
    SCIP_CALL( SCIPincludeReaderBasic(scip, &reader, READER_NAME, READER_DESC, READER_EXTENSION, readerdata) );
 
    /* set non fundamental callbacks via setter functions */
    SCIP_CALL( SCIPsetReaderCopy(scip, reader, readerCopyCip) );
+   SCIP_CALL( SCIPsetReaderFree(scip, reader, readerFreePpm) );
    SCIP_CALL( SCIPsetReaderRead(scip, reader, readerReadCip) );
    SCIP_CALL( SCIPsetReaderWrite(scip, reader, readerWriteCip) );
+
+   /* add cip reader parameters */
+   SCIP_CALL( SCIPaddBoolParam(scip,
+         "reading/cipreader/writefixedvars", "should fixed and aggregated variables be printed (if not, re-parsing might fail)",
+         &readerdata->writefixedvars, FALSE, DEFAULT_CIP_WRITEFIXEDVARS, NULL, NULL) );
 
    return SCIP_OKAY;
 }
